--- a/org.example.parent/pom.xml
+++ b/org.example.parent/pom.xml
@@ -20,6 +20,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <eclipse-repo.url>http://download.eclipse.org/releases/2019-09</eclipse-repo.url>
+    <build-helper-version>3.0.0</build-helper-version>
+    <versions-version>2.7</versions-version>
   </properties>
 
   <repositories>
@@ -41,6 +43,21 @@
     </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>${build-helper-version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>${versions-version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-versions</artifactId>
+          <version>${tycho-version}</version>
+        </plugin>
         <plugin>
           <groupId>org.eclipse.m2e</groupId>
           <artifactId>lifecycle-mapping</artifactId>
