--- a/org.example.parent/pom.xml
+++ b/org.example.parent/pom.xml
@@ -55,7 +55,7 @@
         </plugin>
         <plugin>
           <groupId>org.eclipse.tycho</groupId>
-          <artifactId>tycho-versions</artifactId>
+          <artifactId>tycho-versions-plugin</artifactId>
           <version>${tycho-version}</version>
         </plugin>
         <plugin>
